# Delegation_BMF

./: README.md
Data/Real/: ThoraricSurgery.csv  audio.csv  autism.csv  breast.csv  car.csv  chess_krvskp.csv  cmc.csv  dermatology.csv  dna.csv  firewall.csv  flare.csv  heart.csv  hepatits.csv  iris.csv  lymphography.csv  mushroom.csv  nursery.csv  paleo.csv  phishing.csv  soybean.csv  studentPerformance.csv  tumor.csv  votes.csv  wine.csv  zoo.csv
Data/Synthetic/: d_0.1_k_20.csv  d_0.1_k_30.csv  d_0.1_k_40.csv  d_0.2_k_20.csv  d_0.2_k_30.csv  d_0.2_k_40.csv  d_0.3_k_20.csv  d_0.3_k_30.csv  d_0.3_k_40.csv  d_0.4_k_20.csv  d_0.4_k_30.csv  d_0.4_k_40.csv
code/: CMakeLists.txt  main.cpp  verif.py
code/lib/EvalMaxSAT/src/: EvalMaxSAT.h  virtualmaxsat.h
code/lib/MaLib/src/: Moy.h  matrixloarder.h
code/src/: Matrix.hpp  UnderCover.h
otherTool/CG/: BMF.py  execut_CG.py  execut_CG2.py  execut_IP.py  execut_IP_sansK.py
otherTool/iteress-ins/: Makefile  bench.sh  execut.sh  iteress  iteress-static-linux-i686  iteress-static-linux-x86_64  iteress.c  iteressShowSimplfication  iteressShowSimplfication.c  score.cpp
script/: BMF_with_CG.sh  BMF_with_Optiblock.sh  IteressBMF_with_CG.sh  IteressBMF_with_Optiblock.sh  benchIteressSimplification.sh  benchIteressSimplificationOnSynthetic.sh  benchOptiOnSyntetic.sh  benchOptiOnSynteticSimplified.sh  existentialBMF_with_CG.sh  existentialBMF_with_Optiblock.sh  generateSimplExi.sh  generateSimplUni.sh  simplifyAndFastBMF.sh  simplifyAndFastBMFOnSyntetic.sh  universalBMF_with_CG.sh  universalBMF_with_Optiblock.sh
(+119 files in other folders)
